fixed the scrolling offset on mobile view

--- a/style.css
+++ b/style.css
@@ -305,6 +305,11 @@ form input, form textarea {
 		padding: 10px;
 	}
 
+	section {
+		scroll-margin: 60px;
+
+	}
+
 	.logo, .menu-items {
 		font-size: 1rem;
 		letter-spacing: 0;
@@ -333,6 +338,7 @@ form input, form textarea {
 	h2 {
 		font-size: 2.2rem;
 		line-height: 2.2rem;
+		scroll-margin: 1000px;
 	}
 
 	h3.project-title {
